added validation, error checks and rest updated
