# routes/index.js
@@ -1,7 +1,10 @@
 const express = require("express");
 const router = express();
+const opencors = require('../middleware/opencors');
 
+router.use(opencors);
 router.use("/recipes", require("./recipes"));
-// router.use("/api-docs", require("./swagger"));
+router.use("/fromTheKitchenOf", require("./kitchens"))
+router.use("/api-docs", require("./swagger"));
 
 module.exports = router;
